--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ body{    background-color: #f5f5f4;}
 	font-size:15px;
 	float:left;
 }
-.postExample{display:none;}
+.postExample{opacity:0;}
 </style>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
@@ -30,7 +30,7 @@ body{    background-color: #f5f5f4;}
 <div id="hold">
 <img src="./images/ajax.png" alt="logo" />
 <div class="row">
-<div class="col-md-12">
+<div class="col-md-2">
 <div class="titlecontent" value="Jquery.load">load()</div>
 <div class="titlecontent" value="Jquery.getvspost">get() vs post()</div>
 <div class="titlecontent" value="Jquery.get">get()</div>
@@ -40,8 +40,8 @@ body{    background-color: #f5f5f4;}
 <div class="titlecontent" value="Jquery.param">param() serialize()</div>
 </div>
 </div>
-<div class="row postExample">
-<div class="col-md-12">
+
+<div class="postExample col-md-8 col-md-offset-2">
 	First name:
 <input type="text" id="input">
 
@@ -50,14 +50,14 @@ body{    background-color: #f5f5f4;}
 $(document).ready(function(){
     $("#input").keyup(function(){
         var txt = $("input").val();
-       /* $.post("https://www.w3schools.com/jquery/demo_ajax_gethint.asp", {suggest: txt}, function(result){
+        $.post("https://www.w3schools.com/jquery/demo_ajax_gethint.asp", {suggest: txt}, function(result){
             $("#span").html(result);
-        });*/
+        });
     });
 });
 </script>
 </div>
-</div>
+
 <div class="row">
 <div id="content" class="col-md-12">
 	
@@ -94,7 +94,7 @@ window.onload=function(){
 		 }
 		 if(temp=="Jquery.post")
 		 {
-			 $(".postExample").css("display","block");
+			 $(".postExample").css("opacity","1");
 			$.get("./content/"+temp+".html", function(data, status){
 			$("#content").html(data);
 			});
