--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ body{    background-color: #f5f5f4;}
 </div>
 </div>
 
-<div class="postExample col-md-8 col-md-offset-2">
+<div class="postExample">
 	First name:
 <input type="text" id="input">
 
@@ -58,11 +58,11 @@ $(document).ready(function(){
 </script>
 </div>
 
-<div class="row">
-<div id="content" class="col-md-12">
+
+<div id="content" class="col-md-8 col-md-offset-2">
 	
 </div>
-</div>
+
 </div>
 
 
