--- a/content/Jquery.param.html
+++ b/content/Jquery.param.html
@@ -10,6 +10,7 @@
 <p>The serialize() method creates a URL encoded text string by serializing form values.<br>
 You can select one or more form elements (like input and/or text area), or the form element itself.<br>The serialized values can be used in the URL query string when making an AJAX request.</p>
 <p>$(selector).serialize()</p>
+<p>The serializeArray() method creates an array of objects (name and value) by serializing form values.</p>
 
 <p>Example</p>
 <pre>
